<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".iu.main.DetailUser">

            <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_photo"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/Name"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_username_detail"
            app:layout_constraintHorizontal_bias="0.481"
            app:layout_constraintStart_toStartOf="@+id/tv_username_detail"
            app:layout_constraintTop_toBottomOf="@+id/tv_username_detail" />

        <TextView
            android:id="@+id/tv_username_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Username"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_photo"
            app:layout_constraintVertical_bias="0.026" />

        <TextView
            android:id="@+id/tv_location_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/Location"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.006"
            app:layout_constraintStart_toEndOf="@+id/location"
            app:layout_constraintTop_toTopOf="@+id/location"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/tv_repository_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/Repository"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/repository"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.027"
            app:layout_constraintStart_toEndOf="@+id/repository"
            app:layout_constraintTop_toTopOf="@+id/repository"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="136dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/location"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_company_detail" />

        <TextView
            android:id="@+id/repository"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="124dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/repository"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/location"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_company_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/Company"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_name_detail"
            app:layout_constraintStart_toStartOf="@+id/tv_name_detail"
            app:layout_constraintTop_toBottomOf="@+id/tv_name_detail" />

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tl_follow_following"
                    android:layout_width="409dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="380dp"
                    android:background="@color/black_git_2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/repository"
                    app:layout_constraintVertical_bias="0.9"
                    app:tabSelectedTextColor="@color/font_color_2"
                    app:tabTextColor="@color/font_color_1">

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/follower" />

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/following" />

                </com.google.android.material.tabs.TabLayout>

                <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textColor="?attr/colorOnPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tl_follow_following"
            app:layout_constraintVertical_bias="0.0" />

        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/spin_kit"
            style="@style/SpinKitView.FoldingCube"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/photo_profile"
            app:SpinKit_Color="?attr/colorOnPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="24dp"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_baseline_favorite_border_24"
        android:contentDescription="@string/favorite" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>